--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@types/aos": "^3.0.7",
     "@types/jasmine": "~5.1.0",
     "daisyui": "^4.12.2",
     "jasmine-core": "~5.1.0",
